--- a/WEB/src/main/webapp/index.html
+++ b/WEB/src/main/webapp/index.html
@@ -15,9 +15,9 @@
     <h1>Форма</h1>
 </div>
 <div>
-    <form class="form" method="post">
-        <input type="text" class="form-control" id="id" placeholder="Введите id" name="id">
-        <input type="submit" class="btn btn-primary" id="submit-button" value="Submit" />
+    <form class="form" method="post" action="echo/post">
+        <input type="text" class="form-control" id="text-input" placeholder="Введите id" name="input">
+        <button type="submit" class="btn btn-primary" id="submit-button">Отравить</button>
     </form>
 </div>
 </body>
